Fix text overflow for settings sidebar and server panel head

--- a/app/assets/stylesheets/channel.scss
+++ b/app/assets/stylesheets/channel.scss
@@ -52,6 +52,7 @@
       color: rgb(140, 143, 148);
       border-radius: 3px;
       padding: 10px;
+      @include text-overflow;
 
       &:hover {
         background: rgb(52, 55, 60);
