--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -359,7 +359,7 @@
       display: flex;
       flex-direction: row;
       padding: 0;
-      padding-left: 10px;
+      margin-left: 10px;
 
       .s-icon,
       #edit-server-icon,
@@ -492,6 +492,8 @@
     color: rgb(142, 146, 151);
 
     h5 {
+      @include text-overflow;
+      max-width: 192px;
       font: {
         family: "Whitney Bold";
         size: 12px;
@@ -499,25 +501,42 @@
       padding: 0 10px 6px;
     }
 
-    h6 {
-      font: {
-        family: "Whitney Medium";
-        size: 10px;
-      }
-      padding: 0 10px 6px;
+    .server-name {
+      font-size: 13px;
     }
 
     .channel-sidebar-head {
-      display: flex;
-      flex-flow: row nowrap;
+      @include flex(row);
+      @include text-overflow;
       padding-left: 10px;
-      overflow: hidden;
+      max-width: 189px;
 
-      h5,
-      h6 {
+      .channel-name {
+        max-width: 167px;
+        @include text-overflow;
+        font-size: 14px;
+      }
+
+      .sub-container {
+        @include text-overflow;
+        flex: 0 1 auto;
+
+        .channel-subtitle {
+          padding: 0 10px 6px;
+          @include text-overflow;
+          color: $dk-settings-sidebar-sub;
+          transform: translateY(1px);
+          font: {
+            family: "Whitney Medium";
+            size: 11px;
+          }
+        }
+      }
+
+      .channel-name,
+      .channel-subtitle {
         padding-left: 5px;
         padding-right: 0;
-        white-space: nowrap;
       }
 
       svg {
@@ -585,7 +604,7 @@
 }
 
 .edit-server-form.channel {
-  padding-left: 0;
+  margin-left: 0 !important;
 
   .inputs.channel {
     margin: 0;
